--- a/notebooks/rag.ipynb
+++ b/notebooks/rag.ipynb
@@ -379,7 +379,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [
     {
@@ -391,31 +391,40 @@
     }
    ],
    "source": [
-    "query_engine = index.as_query_engine(response_mode = 'tree_summarize', verbose = True,  similarity_top_k = 10)\n",
+    "query_engine = index.as_query_engine(response_mode = 'tree_summarize', verbose = True,  similarity_top_k = 10, \n",
+    "                                     node_postprocessors = [CohereRerank(top_n = 5)])\n",
     "\n",
-    "response = query_engine.query(\"Summarize the ST443 Lecture 5 slides on regularisation. What are the main topics covered?\")"
+    "response = query_engine.query(\n",
+    "    \"\"\"Based on ST443 Lecture 5 content, generate 3 theoretical questions.\n",
+    "    \n",
+    "    Example of a GOOD question style:\n",
+    "    \"Explain why ridge regression shrinks coefficients but never sets them exactly to zero, \n",
+    "    while lasso can produce exactly zero coefficients. What is the geometric interpretation?\"\n",
+    "    \n",
+    "    Example of a BAD question (don't do this):\n",
+    "    \"How can machine learning be applied to data?\"\n",
+    "    \n",
+    "    Now generate 3 questions in the GOOD style about regularisation topics from Lecture 5.\n",
+    "    \"\"\"\n",
+    ")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Answer : The ST443 Lecture 5 slides on regularization cover the following main topics:\n",
-      "- Explanation of regularisation/penalisation\n",
-      "- Best subset selection and stepwise selection\n",
-      "- Model selection criteria\n",
-      "- Ridge regression and shrinkage\n",
-      "- Lasso regression and the sparsity-inducing ℓ1 penalty\n",
-      "- Two general approaches: regularisation and dimension reduction\n",
+      "Answer : 1. How does ridge regression differ from lasso regression in terms of the way they perform shrinkage on the coefficients, and how does this difference impact the resulting models' interpretability and sparsity?\n",
+      "2. Can you explain the concept of soft-thresholding in the context of the lasso regression and how it leads to feature selection? How does this relate to the regularization process?\n",
+      "3. In the context of model selection criteria discussed in Lecture 5, why is selecting a good value of the regularization parameter crucial for both ridge regression and lasso regression? How can techniques like cross-validation help in determining the optimal value of this parameter?\n",
       "\n",
       "Sources: \n",
       "\n",
-      "1. Score: 0.423\n",
+      "1. Score: 1.000\n",
       "   File: ST443_Lecture_5.pdf\n",
       "   Text: Key learning points\n",
       "▶ What is regularisation/penalisation?\n",
@@ -425,236 +434,108 @@
       "▶ Lasso regression and the sparsity-inducing ℓ1 penalty\n",
       "Milan Vojnović 2/36...\n",
       "\n",
-      "2. Score: 0.361\n",
-      "   File: ST443_Lecture_5.pdf\n",
-      "   Text: Flexibility vs intepretability\n",
-      "Milan Vojnović 6/36...\n",
-      "\n",
-      "3. Score: 0.358\n",
-      "   File: ST443_Lecture_6.pdf\n",
-      "   Text: Milan Vojnović 24/41...\n",
-      "\n",
-      "4. Score: 0.356\n",
-      "   File: ST443_Lecture_5.pdf\n",
-      "   Text: Two general approaches\n",
-      "▶ Regularisation. Instead of just minimising the residual sum of squares, we\n",
-      "add in an additional criteria in training that encourages low complexity\n",
-      "models.\n",
-      "▶ Dimension reduction. We first find a small set of directions that best\n",
-      "summarise the variability in our data and perform subsequent analysis on\n",
-      "synthetic variables created using these directions.\n",
-      "– More on this in Lecture 9.\n",
-      "Milan Vojnović 7/36...\n",
-      "\n",
-      "5. Score: 0.356\n",
+      "2. Score: 0.925\n",
       "   File: ISLRv2_corrected_June_2023.pdf\n",
-      "   Text: We can also use different values of\n",
-      "λfor the groups of weights from different layers; in this case W1andW2\n",
-      "were penalized, while the relatively few weightsBof the output layer were\n",
-      "not penalized at all. Lasso regularization is also popular as an additional\n",
-      "form of regularization, or as an alternative to ridge.\n",
-      "Figure10.18shows some metrics that evolve during the training of the\n",
-      "network on theMNISTdata. It turns out that SGD naturally enforces its\n",
-      "own form of approximately quadratic regularization.22Here the minibatch\n",
-      "22This and other properties of SGD for deep learning are the subject of much research\n",
-      "in the machine learning literature at the time of writing....\n",
+      "   Text: (6.15)\n",
+      "Figure6.10displays the situation. We can see that ridge regression and\n",
+      "the lasso perform two very different types of shrinkage. In ridge regression,\n",
+      "each least squares coeﬀicient estimate is shrunken by the same proportion.\n",
+      "In contrast, the lasso shrinks each least squares coeﬀicient towards zero by\n",
+      "a constant amount,λ/2; the least squares coeﬀicients that are less than\n",
+      "λ/2in absolute value are shrunken entirely to zero. The type of shrink-\n",
+      "age performed by the lasso in this simple setting ( 6.15) is known assoft-\n",
+      "thresholding. The fact that some lasso coeﬀicients are shrunken entirely to soft-\n",
+      "thresholdingzero explains why the lasso performs feature selection.\n",
+      "In the case of a more general data matrix X, the story is a little more\n",
+      "complicated than what is depicted in Figure6.10, but the main ideas still\n",
+      "hold approximately: ridge regression more or less shrinks every dimension\n",
+      "of the data by the same proportion, whereas the lasso more or less shrinks...\n",
       "\n",
-      "6. Score: 0.355\n",
+      "3. Score: 0.622\n",
+      "   File: ISLRv2_corrected_June_2023.pdf\n",
+      "   Text: As a result, models generated\n",
+      "from the lasso are generally much easier to interpret than those produced\n",
+      "by ridge regression. We say that the lasso yields sparsemodels—that is,sparse\n",
+      "models that involve only a subset of the variables. As in ridge regression,\n",
+      "selecting a good value ofλfor the lasso is critical; we defer this discussion\n",
+      "to Section6.2.3, where we use cross-validation.\n",
+      "As an example, consider the coeﬀicient plots in Figure6.6, which are gen-\n",
+      "erated from applying the lasso to the Creditdata set. Whenλ=0, then\n",
+      "the lasso simply gives the least squares fit, and whenλbecomes suﬀiciently\n",
+      "large, the lasso gives the null model in which all coeﬀicient estimates equal\n",
+      "zero. However, in between these two extremes, the ridge regression and\n",
+      "lasso models are quite different from each other. Moving from left to right\n",
+      "in the right-hand panel of Figure6.6, we observe that at first the lasso re-\n",
+      "sults in a model that contains only theratingpredictor. Thenstudentand\n",
+      "limitenter the model almost simultaneously, shortly followed by income.\n",
+      "Eventually, the remaining variables enter the model. Hence, depending on\n",
+      "the value ofλ, the lasso can produce a model involving any number of vari-\n",
+      "ables. In contrast, ridge regression will always include all of the variables in\n",
+      "the model, although the magnitude of the coeﬀicient estimates will depend\n",
+      "onλ....\n",
+      "\n",
+      "4. Score: 0.560\n",
+      "   File: ISLRv2_corrected_June_2023.pdf\n",
+      "   Text: 6.2 Shrinkage Methods 245\n",
+      "FIGURE 6.7. Contours of the error and constraint functions for the lasso\n",
+      "(left)and ridge regression(right). The solid blue areas are the constraint regions,\n",
+      "|β1|+|β2|≤sandβ2\n",
+      "1+β2\n",
+      "2≤s, while the red ellipses are the contours of the RSS.\n",
+      "non-zero. However, the lasso constraint hascornersat each of the axes, and\n",
+      "so the ellipse will often intersect the constraint region at an axis. When this\n",
+      "occurs, one of the coeﬀicients will equal zero. In higher dimensions, many of\n",
+      "the coeﬀicient estimates may equal zero simultaneously. In Figure6.7, the\n",
+      "intersection occurs atβ1=0, and so the resulting model will only include\n",
+      "β2.\n",
+      "In Figure6.7, we considered the simple case of p=2. Whenp=3,\n",
+      "then the constraint region for ridge regression becomes a sphere, and the\n",
+      "constraint region for the lasso becomes a polyhedron. When p>3, the\n",
+      "constraint for ridge regression becomes a hypersphere, and the constraint\n",
+      "for the lasso becomes a polytope. However, the key ideas depicted in Fig-\n",
+      "ure6.7still hold. In particular, the lasso leads to feature selection when\n",
+      "p>2due to the sharp corners of the polyhedron or polytope.\n",
+      "Comparing the Lasso and Ridge Regression\n",
+      "It is clear that the lasso has a major advantage over ridge regression, in\n",
+      "that it produces simpler and more interpretable models that involve only a\n",
+      "subset of the predictors. However, which method leads to better prediction\n",
+      "accuracy? Figure6.8displays the variance, squared bias, and test MSE of\n",
+      "the lasso applied to the same simulated data as in Figure 6.5. Clearly the\n",
+      "lasso leads to qualitatively similar behavior to ridge regression, in that asλ\n",
+      "increases, the variance decreases and the bias increases. In the right-hand\n",
+      "panel of Figure6.8, the dotted lines represent the ridge regression fits.\n",
+      "Here we plot both against their R2on the training data. This is another...\n",
+      "\n",
+      "5. Score: 0.498\n",
       "   File: elements_of_statistical_learning.pdf\n",
-      "   Text: 166 5. Basis Expansions and Regularization\n",
-      "125\n",
-      "130\n",
-      "135\n",
-      "140\n",
-      "145\n",
-      "150\n",
-      "155\n",
-      "15\n",
-      "20\n",
-      "25\n",
-      "30\n",
-      "35\n",
-      "40\n",
-      "45\n",
-      "20 30 40 50 60\n",
-      "Age\n",
-      "Obesity\n",
-      "Systolic Blood Pressure\n",
-      "120\n",
-      "125\n",
-      "130\n",
-      "135\n",
-      "140\n",
-      "145\n",
-      "150\n",
-      "155\n",
-      "160\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      " \n",
-      " \n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      " \n",
-      "\n",
-      " \n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      " \n",
-      "\n",
-      " \n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      " \n",
-      " \n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      " \n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "...\n",
-      "\n",
-      "7. Score: 0.351\n",
-      "   File: mml-book.pdf\n",
-      "   Text: 8.3 Parameter Estimation 265\n",
-      "8.2.5 Further Reading\n",
-      "Due to the fact that the original development of empirical risk minimiza-\n",
-      "tion (Vapnik, 1998) was couched in heavily theoretical language, many\n",
-      "of the subsequent developments have been theoretical. The area of study\n",
-      "is called statistical learning theory (Vapnik, 1999; Evgeniou et al., 2000; statistical learning\n",
-      "theoryHastie et al., 2001; von Luxburg and Sch¨olkopf, 2011). A recent machine\n",
-      "learning textbook that builds on the theoretical foundations and develops\n",
-      "efficient learning algorithms is Shalev-Shwartz and Ben-David (2014).\n",
-      "The concept of regularization has its roots in the solution of ill-posed in-\n",
-      "verse problems (Neumaier, 1998). The approach presented here is called\n",
-      "Tikhonov regularization, and there is a closely related constrained version Tikhonov\n",
-      "regularizationcalled Ivanov regularization. Tikhonov regularization has deep relation-\n",
-      "ships to the bias-variance trade-off and feature selection (B ¨uhlmann and\n",
-      "Van De Geer, 2011). An alternative to cross-validation is bootstrap and\n",
-      "jackknife (Efron and Tibshirani, 1993; Davidson and Hinkley, 1997; Hall,\n",
-      "1992).\n",
-      "Thinking about empirical risk minimization (Section 8.2) as “probabil-\n",
-      "ity free” is incorrect. There is an underlying unknown probability distri-\n",
-      "bution p(x, y) that governs the data generation. However, the approach\n",
-      "of empirical risk minimization is agnostic to that choice of distribution.\n",
-      "This is in contrast to standard statistical approaches that explicitly re-\n",
-      "quire the knowledge of p(x, y). Furthermore, since the distribution is a\n",
-      "joint distribution on both examples x and labels y, the labels can be non-\n",
-      "deterministic. In contrast to standard statistics we do not need to specify\n",
-      "the noise distribution for the labels y.\n",
-      "8.3 Parameter Estimation\n",
-      "In Section 8.2, we did not explicitly model our problem using probability\n",
-      "distributions....\n",
-      "\n",
-      "8. Score: 0.350\n",
-      "   File: ST443_Lecture_1.pdf\n",
-      "   Text: A fundamental picture\n",
-      "We must keep this picture in mind when choosing a learning method.\n",
-      "More flexible/complicated one is not always better!\n",
-      "Milan Vojnović 33/33...\n",
-      "\n",
-      "9. Score: 0.346\n",
-      "   File: ST443_Lecture_1.pdf\n",
-      "   Text: Some relevant courses at LSE\n",
-      "▶ ST444 Computational Data Science, 2024 AT.\n",
-      "▶ ST449 Artificial Intelligence, 2024 AT.\n",
-      "▶ ST451 Bayesian Machine Learning, 2025 WT.\n",
-      "▶ ST455 Reinforcement Learning, 2024 WT.\n",
-      "▶ ST456 Deep Learning, 2024 WT.\n",
-      "▶ MY474 Applied Machine Learning for Social Science, 2024 AT.\n",
-      "▶ MA429 Algorithmic Techniques for Data Mining, 2024 WT.\n",
-      "Milan Vojnović 8/33...\n",
-      "\n",
-      "10. Score: 0.340\n",
-      "   File: ST443_Lecture_3.pdf\n",
-      "   Text: ▶ Always a good idea to use a smooth loss in training.\n",
-      "Milan Vojnović 27/30...\n"
+      "   Text: 3.4 Shrinkage Methods 69\n",
+      "is a quadratic programming problem, although we see in Section 3.4.4 that\n",
+      "eﬃcient algorithms are available for computing the entire path of solutions\n",
+      "as λis varied, with the same computational cost as for ridge regression.\n",
+      "Because of the nature of the constraint, makingt suﬃciently small will\n",
+      "cause some of the coeﬃcients to be exactly zero. Thus the lasso does a kind\n",
+      "of continuous subset selection. Ift is chosen larger thant0 =∑p\n",
+      "1 |ˆβj| (where\n",
+      "ˆβj = ˆβls\n",
+      "j , the least squares estimates), then the lasso estimates are theˆβj’s.\n",
+      "On the other hand, fort = t0/2 say, then the least squares coeﬃcients are\n",
+      "shrunk by about 50% on average. However, the nature of the shrinkage\n",
+      "is not obvious, and we investigate it further in Section 3.4.4 below. Like\n",
+      "the subset size in variable subset selection, or the penalty parameter in\n",
+      "ridge regression,t should be adaptively chosen to minimize an estimate of\n",
+      "expected prediction error.\n",
+      "In Figure 3.7, for ease of interpretation, we have plotted the lasso pre-\n",
+      "diction error estimates versus the standardized parameters = t/∑p\n",
+      "1 |ˆβj|.\n",
+      "Av a l u eˆs ≈0.36 was chosen by 10-fold cross-validation; this caused four\n",
+      "coeﬃcients to be set to zero (ﬁfth column of Table 3.3). The resulting\n",
+      "model has the second lowest test error, slightly lower than the full least\n",
+      "squares model, but the standard errors of the test error estimates (last line\n",
+      "of Table 3.3) are fairly large.\n",
+      "Figure 3.10 shows the lasso coeﬃcients as the standardized tuning pa-\n",
+      "rameter s = t/∑p\n",
+      "1 |ˆβj| is varied. Ats =1 .0 these are the least squares\n",
+      "estimates; they decrease to 0 ass→0....\n"
      ]
     }
    ],
@@ -666,20 +547,6 @@
     "    print(f\"   File: {node.metadata.get('file_name', 'Unknown')}\")\n",
     "    print(f\"   Text: {node.text}...\")"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
