changes to structure

--- a/notebooks/rag.ipynb
+++ b/notebooks/rag.ipynb
@@ -553,7 +553,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "chroma_client.get_or_create_collection"
+   ]
   }
  ],
  "metadata": {
